// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GasWidget Opens gas menu upon click and "rapid" is selected properly 1`] = `
<div
  class="MuiPopover-root-58"
  id="menu-"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
>
  <div
    aria-hidden="true"
    style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: transparent;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiPaper-root-64 MuiMenu-paper-56 MuiPopover-paper-59 MuiPaper-elevation8-75 MuiPaper-rounded-65"
    style="opacity: 1; transform: scale(1, 1); min-width: 0; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
    tabindex="-1"
  >
    <ul
      class="MuiList-root-92 MuiMenu-list-57 MuiList-padding-93"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root-111 MuiListItem-root-100 MuiMenuItem-root-96 MuiMenuItem-gutters-97 MuiListItem-gutters-107 MuiListItem-button-108"
        data-value="rapid"
        role="option"
        tabindex="-1"
      >
        122
        <span
          class="MuiTouchRipple-root-114"
        />
      </li>
      <li
        aria-disabled="false"
        aria-selected="true"
        class="MuiButtonBase-root-111 MuiListItem-root-100 MuiMenuItem-root-96 MuiMenuItem-selected-98 MuiMenuItem-gutters-97 MuiListItem-gutters-107 MuiListItem-button-108 MuiListItem-selected-110 MuiButtonBase-focusVisible-113 MuiListItem-focusVisible-102"
        data-value="standard"
        role="option"
        tabindex="0"
      >
        75
        <span
          class="MuiTouchRipple-root-114"
        />
      </li>
      <li
        aria-disabled="false"
        class="MuiButtonBase-root-111 MuiListItem-root-100 MuiMenuItem-root-96 MuiMenuItem-gutters-97 MuiListItem-gutters-107 MuiListItem-button-108"
        data-value="slow"
        role="option"
        tabindex="-1"
      >
        51
        <span
          class="MuiTouchRipple-root-114"
        />
      </li>
    </ul>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`GasWidget Opens gas menu upon click and "rapid" is selected properly 2`] = `
<div>
  <div
    class="MuiInputBase-root-29 MuiOutlinedInput-root-14 MuiInputBase-colorSecondary-38 MuiOutlinedInput-colorSecondary-15 makeStyles-gasSelector-1 MuiInputBase-focused-31 MuiOutlinedInput-focused-16 MuiInputBase-adornedStart-33 MuiOutlinedInput-adornedStart-18"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root-47 makeStyles-gasIcon-2"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
      />
    </svg>
    <div
      aria-haspopup="listbox"
      class="MuiSelect-root-3 MuiSelect-select-4 MuiSelect-selectMenu-7 MuiSelect-outlined-6 MuiInputBase-input-40 MuiOutlinedInput-input-24 MuiInputBase-inputAdornedStart-44 MuiOutlinedInput-inputAdornedStart-27"
      role="button"
      tabindex="0"
    >
      122
    </div>
    <input
      aria-hidden="true"
      class="MuiSelect-nativeInput-13"
      tabindex="-1"
      value="rapid"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root-47 MuiSelect-icon-9 MuiSelect-iconOutlined-12"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-60 MuiOutlinedInput-notchedOutline-23"
      style="padding-left: 8px;"
    >
      <legend
        class="PrivateNotchedOutline-legend-61"
        style="width: 0.01px;"
      >
        <span>
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`GasWidget Renders correctly 1`] = `
<div>
  <div
    class="MuiInputBase-root-29 MuiOutlinedInput-root-14 MuiInputBase-colorSecondary-38 MuiOutlinedInput-colorSecondary-15 makeStyles-gasSelector-1 MuiInputBase-adornedStart-33 MuiOutlinedInput-adornedStart-18"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root-47 makeStyles-gasIcon-2"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
      />
    </svg>
    <div
      aria-haspopup="listbox"
      class="MuiSelect-root-3 MuiSelect-select-4 MuiSelect-selectMenu-7 MuiSelect-outlined-6 MuiInputBase-input-40 MuiOutlinedInput-input-24 MuiInputBase-inputAdornedStart-44 MuiOutlinedInput-inputAdornedStart-27"
      role="button"
      tabindex="0"
    >
      75
    </div>
    <input
      aria-hidden="true"
      class="MuiSelect-nativeInput-13"
      tabindex="-1"
      value="standard"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root-47 MuiSelect-icon-9 MuiSelect-iconOutlined-12"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-60 MuiOutlinedInput-notchedOutline-23"
      style="padding-left: 8px;"
    >
      <legend
        class="PrivateNotchedOutline-legend-61"
        style="width: 0.01px;"
      >
        <span>
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;
